--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@
     /* justify-content: space-evenly; */
     align-items: center;
     /* min-height: 70vh; */
-       max-width:90%;
+/*        max-width:90%; */
    }
    .name{
      font-size: 2rem;
@@ -382,4 +382,5 @@
     80%{background-position:0%  50%, 50%  50%,100% 100%}
 }
 }
+
 
